# wikipedia2md

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
src/wikipedia2md/: cli.py  iso-639.json
tests/: conftest.py  requirements-test.txt  test_cli.py  test_cli_core.py  test_cli_dom.py  test_cli_edge_cases.py  test_cli_error_handling.py  test_cli_formatting.py  test_cli_logging.py  test_cli_output.py  test_cli_utils.py  test_cli_wikipedia.py  test_formatting.py  test_parsing.py  test_wikipedia2md.py
